--- a/src/css/Game.css
+++ b/src/css/Game.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100vh;
-  color: var(--text-color);
+  /* color: var(--text-color); */
 }
 .game_nav {
   display: flex;
@@ -21,7 +21,7 @@
 }
 
 .game_scoreboard {
-  border: 1px solid var(--text-color);
+  border: 1px solid;
   border-radius: 5px;
   padding: 1%;
   font-size: 1vw;
@@ -68,8 +68,8 @@
   font-size: 3vw;
   text-transform: uppercase;
   text-align: center;
-  background-color: var(--bg-color);
-  color: var(--text-color);
+  /* background-color: var(--bg-color);
+  color: var(--text-color); */
   border-radius: 10px;
   border: 1px solid gray;
   /* margin: 0 0 5% 0; */
@@ -81,8 +81,8 @@
   width: max-content;
   margin: 0 0 3% 3%;
   border: 0;
-  background-color: var(--bg-color);
-  color: var(--text-color);
+  /* background-color: var(--bg-color); */
+  /* color: var(--text-color); */
   cursor: pointer;
   font-size: 1vw;
 }
